@@ -262,7 +262,7 @@ OBJECTS_TREE = {'functions': sorted(['pa_count_devices', 'pa_get_default_input',
                       'opensoundcontrol': sorted(['OscReceive', 'OscSend', 'OscDataSend', 'OscDataReceive']),
                       'pan': sorted(['Pan', 'SPan', 'Switch', 'Selector', 'Mixer']),
                       'patterns': sorted(['Pattern', 'Score', 'CallAfter']),
-                      'randoms': sorted(['Randi', 'Randh', 'Choice', 'RandInt', 'Xnoise', 'XnoiseMidi']),
+                      'randoms': sorted(['Randi', 'Randh', 'Choice', 'RandInt', 'Xnoise', 'XnoiseMidi', 'RandDur']),
                       'players': sorted(['SfMarkerShuffler', 'SfPlayer', 'SfMarkerLooper']),
                       'tableprocess': sorted(['TableRec', 'Osc', 'Pointer', 'Lookup', 'Granulator', 'Pulsar', 
                                             'TableRead', 'TableMorph', 'Looper', 'TableIndex', 'OscBank']),
